# localizing-reasoning

./: .gitignore  LICENSE  README.md  cka_analysis.ipynb  paper_figs.ipynb  pyproject.toml  run_cka_ablations.sh  weight_diff.csv  weight_diff.ipynb
conf/: cache_representations.yaml  cka.yaml  cka_same_input.yaml
conf/model/: acereason.yaml  acereason1-1.yaml  adaptthink-1-5b-delta0.yaml  athena-r3-1-5b.yaml  atlas-flash-1-5b-preview.yaml  boba2.yaml  conciser-zero-7b.yaml  deepcoder-1-5b-preview.yaml  deepmath-1-5b.yaml  deepscaler-1-5b-preview.yaml  fastcurl-1-5b-v3.yaml  lightr1.yaml  minimath-r1-1-5b.yaml  nemotron-research-reasoning-qwen-1-5b.yaml  open-rs1.yaml  open-rs3.yaml  openr1.yaml  openreasoner.yaml  qwen-r1-distill-1-5b.yaml  qwen-r1-distill.yaml  qwen2-5-1-5b-open-r1-grpo.yaml  qwen2.5-math-7b-rope300k.yaml  qwen2.5-math-7b.yaml  qwen25-math-7b-oat-zero.yaml  still-3-1-5b-preview.yaml  thinkless-1-5b-rl-deepscaler.yaml  zr1-1-5b.yaml
scripts/: cache_representations.py  cka_ablations.py  run_cka_analysis_with_fixed_trace.py  start_caching.sh  start_caching_2.sh
src/reasoning/: cache.py  cka.py  dtypes.py  generation.py
src/reasoning/grader/: grader.py  note.txt
